--- a/index.html
+++ b/index.html
@@ -3,8 +3,129 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700">
+    <style>
+        /* hack a quick template */
+        body {
+            font-family: 'Droid Sans',sans-serif;
+            font-size: 14px;
+            line-height: 1.42857;
+        }
+        h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+            color: inherit;
+            font-family: 'Droid Sans',sans-serif;
+            letter-spacing: 0.2em;
+            text-transform: uppercase;
+            font-weight: 700;
+            line-height: 1.1;}
+        a {
+            margin-right: 1.5rem;
+        }
+        a:hover {
+            text-decoration: none;
+        }
+        .jumbotron h1 {
+            font-size: 32px;
+        }
+        .well {
+            border: 1px solid #DADFE0;
+            padding: 2rem;
+            border-radius: 0.35rem;
+            background-color:transparent;
+            box-shadow: none;
+        }
+    </style>
 </head>
 <body>
-Hello, world.
+<header>
+    <div class="jumbotron" style="padding-bottom: 6rem; padding-top: 6rem;">
+        <div class="container">
+            <div class="col-sm-4">
+                <div class="well text-center">
+                <i class="fa fa-user" style="font-size: 72px;"></i>
+                    <br /><br /><br />
+                    <nav>
+                        <a href="">Stuff</a>
+                        <a href="">Twitter</a>
+                        <a href="">GitHub</a>
+                        <a href="">Soundcloud</a>
+                    </nav>
+                </div>
+            </div>
+            <div class="col-sm-7 col-sm-offset-1">
+                <h1>I only see spots</h1>
+                <p>UX / IA / UI</p>
+            </div>
+        </div>
+    </div>
+</header>
+<section class="container" style="padding-bottom: 5rem; padding-top: 5rem;">
+    <div class="col-xs-12">
+        <div class="well text-center">
+            <div class="row">
+                <div class="col-xs-8">
+                    <h2><a href="">NGCSS</a></h2>
+                    <h3>first</h3>
+                    <p>A lightweight Angular editor for CSS rule sets. Use it out of the box for custom color Bootstrap css generation or as the base for a larger CSS editor project.</p>
+                </div>
+                <div class="col-xs-4">
+                    <div class="well text-center" style="height:180px;">
+                        <i class="fa fa-edit" style="font-size: 72px;"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="container">
+    <div class="col-sm-6">
+        <div class="well text-center">
+            <a href="">
+                <div>
+                    <h3>
+                        one
+                    </h3>
+                    <p>
+                        one text
+                    <p>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="well text-center">
+            <a href="">
+                <div>
+                    <h3>
+                        two
+                    </h3>
+                    <p>
+                        two text
+                    </p>
+                </div>
+            </a>
+        </div>
+    </div>
+</section>
+<section class="container"  style="padding-bottom: 6rem; padding-top: 6rem;">
+    <div class="col-xs-12">
+        <h3>
+            Stuff
+        </h3>
+        <p>
+            this is stuff.
+        </p>
+    </div>
+</section>
+<footer class="container"  style="  padding-bottom: 6rem; padding-top: 6rem;">
+    <h5>
+        <a href="">Stuff</a>
+        <a href="">Twitter</a>
+        <a href="">GitHub</a>
+        <a href="">SoundCloud</a>
+    </h5>
+</footer>
 </body>
 </html>
