--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="col-xs-8">
                     <h2><a href="">NGCSS</a></h2>
                     <h3>first</h3>
-                    <p>A lightweight Angular editor for CSS rule sets. Use it out of the box for custom color Bootstrap css generation or as the base for a larger CSS editor project.</p>
+                    <p>A lightweight AngularJS editor for CSS rule sets. Use it out of the box for custom color Bootstrap css generation or as the base for a larger CSS editor project.</p>
                 </div>
                 <div class="col-xs-4">
                     <div class="well text-center" style="height:180px;">
