--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
     <div class="col-xs-12">
         <div class="well text-center">
             <div class="row">
-                <div class="col-xs-8">
+                <div class="col-sm-8">
                     <h2><a href="">NGCSS</a></h2>
-                    <h3>first</h3>
-                    <p>A lightweight AngularJS editor for CSS rule sets. Use it out of the box for custom color Bootstrap css generation or as the base for a larger CSS editor project.</p>
+                    <h3>AngularJS + JSON = CSS</h3>
+                    <p>A lightweight editor for CSS rule sets. Use it out of the box for editing Bootstrap colors or as the base for larger live editor projects.</p>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-sm-4">
                     <div class="well text-center" style="height:180px;">
-                        <i class="fa fa-edit" style="font-size: 72px;"></i>
+                        <i class="fa fa-edit" style="font-size: 64px;"></i>
                     </div>
                 </div>
             </div>
