--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
                 <i class="fa fa-user" style="font-size: 72px;"></i>
                     <br /><br /><br />
                     <nav>
-                        <a href="">Stuff</a>
                         <a href="">Twitter</a>
                         <a href="">GitHub</a>
                         <a href="">Soundcloud</a>
@@ -69,10 +68,10 @@
                 <div class="col-sm-8">
                     <h2><a href="">NGCSS</a></h2>
                     <h3>AngularJS + JSON = CSS</h3>
-                    <p>A lightweight editor for CSS rule sets. Use it out of the box for editing Bootstrap colors or as the base for larger live editor projects.</p>
+                    <p>A live style editor for CSS rule sets. Use it out of the box for editing Bootstrap colors or as the base for larger live editor projects.</p>
                 </div>
                 <div class="col-sm-4">
-                    <div class="well text-center" style="height:180px;">
+                    <div class="well text-center">
                         <i class="fa fa-edit" style="font-size: 64px;"></i>
                     </div>
                 </div>
@@ -120,9 +119,8 @@
         </p>
     </div>
 </section>
-<footer class="container"  style="  padding-bottom: 6rem; padding-top: 6rem;">
+<footer class="container"  style="padding-bottom: 6rem; padding-top: 6rem;">
     <h5>
-        <a href="">Stuff</a>
         <a href="">Twitter</a>
         <a href="">GitHub</a>
         <a href="">SoundCloud</a>
