--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         <div class="well text-center">
             <div class="row">
                 <div class="col-sm-8">
-                    <h2><a href="">NGCSS</a></h2>
+                    <h2><a href="http://ionlyseespots.github.io/simple/app">NGCSS</a></h2>
                     <h3>AngularJS + JSON = CSS</h3>
-                    <p>A live style editor for CSS rule sets. Use it out of the box for editing Bootstrap colors or as the base for larger live editor projects.</p>
+                    <p>A live style editor built with AngularJS using ngRepeat, ngStyle, ngClass + JSON to generate a CSS rule set. Use it out of the box for editing Bootstrap colors or as the base for larger live style editor projects.</p>
                 </div>
                 <div class="col-sm-4">
                     <div class="well text-center">
