--- a/index.html
+++ b/index.html
@@ -69,14 +69,7 @@
                     <h2><a href="http://ionlyseespots.github.io/simple/app">NGCSS</a></h2>
                     <h3>AngularJS + JSON = CSS</h3>
                     <p>
-                        A live style editor built with <a href="https://angularjs.org/">AngularJS</a> using
-                        <a href="https://docs.angularjs.org/api/ng/directive/ngRepeat">ngRepeat</a>,
-                        <a href="https://docs.angularjs.org/api/ng/directive/ngStyle">ngStyle</a>,
-                        <a href="https://docs.angularjs.org/api/ng/directive/ngClass">ngClass</a>
-                        + JSON to generate a CSS rule set.
-                        Use it out of the box for editing
-                        <a href="http://getbootstrap.com/">Bootstrap</a>
-                        colors or as the base for larger live style editor projects.
+                        A live style editor built with <a href="https://angularjs.org/">AngularJS</a> using <a href="https://docs.angularjs.org/api/ng/directive/ngRepeat">ngRepeat</a>, <a href="https://docs.angularjs.org/api/ng/directive/ngStyle">ngStyle</a>, <a href="https://docs.angularjs.org/api/ng/directive/ngClass">ngClass</a> + JSON to generate a CSS rule set. Use it out of the box for editing <a href="http://getbootstrap.com/">Bootstrap</a> colors or as the base for larger live style editor projects.
                     </p>
                 </div>
                 <div class="col-sm-4">
