--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         one
                     </h3>
                     <p>
-                        one text
+                        one text example
                     <p>
                 </div>
             </a>
