--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                     <h2><a href="http://ionlyseespots.github.io/simple/app">NGCSS</a></h2>
                     <h3>AngularJS + JSON = CSS</h3>
                     <p>
-                        A live style editor built with AngularJS using ngRepeat, ngStyle, ngClass + JSON to generate a CSS rule set. Use it out of the box for editing Bootstrap colors or as the base for larger live style editor projects.</p>
+                        A live style editor built with AngularJS using ngRepeat, ngStyle, ngClass + JSON to generate a CSS rule set.
+                    </p>
+
                 </div>
                 <div class="col-sm-4">
                     <div class="well text-center">
