--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <a href="">
                 <div>
                     <h3>
-
+                        <a href="http://ionlyseespots.github.io/visualcodedesignsystem/">Visual Code Design System</a>
                     </h3>
                     <p>
 
