--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
                     <h3>
                         <a href="http://ionlyseespots.github.io/visualcodedesignsystem/">Visual Code Design System</a>
                     </h3>
+                    <h3>
+                        A system to let HTML structure define the layout.
+                    </h3>
                     <p>
 
                     <p>
