--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
             color: inherit;
             font-family: 'Droid Sans',sans-serif;
-            letter-spacing: 0.2em;
+            letter-spacing: 0.1em;
             text-transform: uppercase;
             font-weight: 700;
             line-height: 1.1;}
@@ -37,20 +37,20 @@
             background-color:transparent;
             box-shadow: none;
         }
+        a, a:hover {text-decoration: underline;}
     </style>
 </head>
 <body>
+<!--- Gah! I will be updating this with my new Ambient Design system shortly! --->
 <header>
     <div class="jumbotron" style="padding-bottom: 6rem; padding-top: 6rem;">
         <div class="container">
             <div class="col-sm-4">
                 <div class="well text-center">
-                <i class="fa fa-user" style="font-size: 72px;"></i>
-                    <br /><br /><br />
                     <nav>
-                        <a href="">Twitter</a>
-                        <a href="">GitHub</a>
-                        <a href="">Soundcloud</a>
+                        <a href="https://twitter.com/av8boogie"><i class="fa fa-twitter fa-4x"></i></a>
+                        <a href="https://github.com/ionlyseespots"><i class="fa fa-github fa-4x"></i></a>
+                        <a href="https://soundcloud.com/reverendboogieman">  <i class="fa fa-soundcloud fa-4x"></i></a>
                     </nav>
                 </div>
             </div>
@@ -66,16 +66,23 @@
         <div class="well text-center">
             <div class="row">
                 <div class="col-sm-8">
-                    <h2><a href="http://ionlyseespots.github.io/simple/app">NGCSS</a></h2>
-                    <h3>AngularJS + JSON = CSS</h3>
+                    <h2>
+                        <a href="http://ionlyseespots.github.io/ambient-design/index.html">Ambient Design</a>
+                    </h2>
+                    <h3>
+                        Ambient design is a methodology for creating layout.
+                   </h3>
                     <p>
-                        A live style editor built with AngularJS using ngRepeat, ngStyle, ngClass + JSON to generate a CSS rule set.
+                        Ambient has a core fluid design system for HTML sections as a presentation format without the need for structure based classes.
+
                     </p>
+
 
                 </div>
                 <div class="col-sm-4">
                     <div class="well text-center">
-                        <i class="fa fa-edit" style="font-size: 64px;"></i>
+                        <i class="fa fa-html5 fa-5x"></i>
+                        <i class="fa fa-css3 fa-5x"></i>
                     </div>
                 </div>
             </div>
@@ -85,30 +92,24 @@
 <section class="container">
     <div class="col-sm-6">
         <div class="well text-center">
-            <a href="">
                 <div>
-                    <h3>
-                        <a href="http://ionlyseespots.github.io/visualcodedesignsystem/">Visual Code Design System</a>
-                    </h3>
+                    <h3><a href="http://ionlyseespots.github.io/simple/app">CSS Editor</a></h3>
+                    <h3>AngularJS + JSON = CSS</h3>
                     <p>
-                        A system to let HTML structure define the layout.
+                        A live style editor built with AngularJS using ngRepeat, ngStyle, ngClass + JSON to generate a CSS.
                     </p>
                 </div>
-            </a>
         </div>
     </div>
     <div class="col-sm-6">
         <div class="well text-center">
-            <a href="">
                 <div>
-                    <h3>
-
-                    </h3>
+                    <h3><a href="http://ionlyseespots.github.io/design-view/app/#/view1">HTML Editor</a></h3>
+                    <h3>AngularJS + JSON = HTML</h3>
                     <p>
-
+                        A live style HTML editor built with AngularJS using ngRepeat, ngStyle, ngClass + JSON to generate HTML.
                     </p>
                 </div>
-            </a>
         </div>
     </div>
 </section>
@@ -124,9 +125,9 @@
 </section>
 <footer class="container"  style="padding-bottom: 6rem; padding-top: 6rem;">
     <h5>
-        <a href="">Twitter</a>
-        <a href="">GitHub</a>
-        <a href="">SoundCloud</a>
+        <a href="https://twitter.com/av8boogie">Twitter</a>
+        <a href="https://github.com/ionlyseespots">GitHub</a>
+        <a href="https://soundcloud.com/reverendboogieman">SoundCloud</a>
     </h5>
 </footer>
 </body>
