--- a/index.html
+++ b/index.html
@@ -38,23 +38,24 @@
             box-shadow: none;
         }
         a, a:hover {text-decoration: underline;}
+        .col-collapse {padding-left: 0; padding-right: 0;}
     </style>
 </head>
 <body>
 <!--- Gah! I will be updating this with my new Ambient Design system shortly! --->
 <header>
-    <div class="jumbotron" style="padding-bottom: 6rem; padding-top: 6rem;">
+    <div class="jumbotron">
         <div class="container">
-            <div class="col-sm-4">
+            <div class="col-sm-4 col-collapse">
                 <div class="well text-center">
                     <nav>
-                        <a href="https://twitter.com/av8boogie"><i class="fa fa-twitter fa-4x"></i></a>
-                        <a href="https://github.com/ionlyseespots"><i class="fa fa-github fa-4x"></i></a>
-                        <a href="https://soundcloud.com/reverendboogieman">  <i class="fa fa-soundcloud fa-4x"></i></a>
+                        <a href="https://twitter.com/av8boogie"><i class="fa fa-twitter fa-3x"></i></a>
+                        <a href="https://github.com/ionlyseespots"><i class="fa fa-github fa-3x"></i></a>
+                        <a href="https://soundcloud.com/reverendboogieman">  <i class="fa fa-soundcloud fa-3x"></i></a>
                     </nav>
                 </div>
             </div>
-            <div class="col-sm-7 col-sm-offset-1">
+            <div class="col-sm-7 col-sm-offset-1 col-collapse">
                 <h1>I only see spots</h1>
                 <p>UX / IA / UI</p>
             </div>
@@ -62,10 +63,10 @@
     </div>
 </header>
 <section class="container" style="padding-bottom: 5rem; padding-top: 5rem;">
-    <div class="col-xs-12">
+    <div class="col-xs-12 col-collapse">
         <div class="well text-center">
             <div class="row">
-                <div class="col-sm-8">
+                <div class="col-sm-8 col-collapse">
                     <h2>
                         <a href="http://ionlyseespots.github.io/ambient-design/index.html">Ambient Design</a>
                     </h2>
@@ -79,7 +80,7 @@
 
 
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 col-collapse">
                     <div class="well text-center">
                         <i class="fa fa-html5 fa-5x"></i>
                         <i class="fa fa-css3 fa-5x"></i>
@@ -90,7 +91,7 @@
     </div>
 </section>
 <section class="container">
-    <div class="col-sm-6">
+    <div class="col-sm-6" style="padding-left: 0;">
         <div class="well text-center">
                 <div>
                     <h3><a href="http://ionlyseespots.github.io/simple/app">CSS Editor</a></h3>
@@ -101,7 +102,7 @@
                 </div>
         </div>
     </div>
-    <div class="col-sm-6">
+    <div class="col-sm-6" style="padding-right: 0;">
         <div class="well text-center">
                 <div>
                     <h3><a href="http://ionlyseespots.github.io/design-view/app/#/view1">HTML Editor</a></h3>
@@ -111,16 +112,6 @@
                     </p>
                 </div>
         </div>
-    </div>
-</section>
-<section class="container"  style="padding-bottom: 6rem; padding-top: 6rem;">
-    <div class="col-xs-12">
-        <h3>
-            Stuff
-        </h3>
-        <p>
-            this is stuff.
-        </p>
     </div>
 </section>
 <footer class="container"  style="padding-bottom: 6rem; padding-top: 6rem;">
