--- a/index.html
+++ b/index.html
@@ -75,10 +75,7 @@
                    </h3>
                     <p>
                         Ambient has a core fluid design system for HTML sections as a presentation format without the need for structure based classes.
-
                     </p>
-
-
                 </div>
                 <div class="col-sm-4 col-collapse">
                     <div class="well text-center">
@@ -93,24 +90,24 @@
 <section class="container">
     <div class="col-sm-6" style="padding-left: 0;">
         <div class="well text-center">
-                <div>
-                    <h3><a href="http://ionlyseespots.github.io/simple/app">CSS Editor</a></h3>
-                    <h3>AngularJS + JSON = CSS</h3>
-                    <p>
-                        A live style editor built with AngularJS using ngRepeat, ngStyle, ngClass + JSON to generate a CSS.
-                    </p>
-                </div>
+            <div>
+                <h3><a href="http://ionlyseespots.github.io/simple/app">CSS Editor</a></h3>
+                <h3>AngularJS + JSON = CSS</h3>
+                <p>
+                    A live style editor built with AngularJS using ngRepeat, ngStyle, ngClass + JSON to generate a CSS.
+                </p>
+            </div>
         </div>
     </div>
     <div class="col-sm-6" style="padding-right: 0;">
         <div class="well text-center">
-                <div>
-                    <h3><a href="http://ionlyseespots.github.io/design-view/app/#/view1">HTML Editor</a></h3>
-                    <h3>AngularJS + JSON = HTML</h3>
-                    <p>
-                        A live style HTML editor built with AngularJS using ngRepeat, ngStyle, ngClass + JSON to generate HTML.
-                    </p>
-                </div>
+            <div>
+                <h3><a href="http://ionlyseespots.github.io/design-view/app/#/headerTemplate">HTML Editor</a></h3>
+                <h3>AngularJS + JSON = HTML</h3>
+                <p>
+                    A live style HTML editor built with AngularJS using ngRepeat, ngStyle, ngClass + JSON to generate HTML.
+                </p>
+            </div>
         </div>
     </div>
 </section>
