--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
 <section class="container">
     <div class="col-sm-6" style="padding-left: 0;">
         <div class="well text-center">
-            <div>
+            <div>d
                 <h3><a href="http://ionlyseespots.github.io/simple/app">CSS Editor</a></h3>
                 <h3>AngularJS + JSON = CSS</h3>
                 <p>
-                    A live style editor built with AngularJS using ngRepeat, ngStyle, ngClass + JSON to generate a CSS.
+                     A live style editor built with AngularJS using ngRepeat, ngStyle, ngClass + JSON to generate a CSS.
                 </p>
             </div>
         </div>
