--- a/index.html
+++ b/index.html
@@ -87,10 +87,35 @@
         </div>
     </div>
 </section>
+<section class="container" style="padding-bottom: 5rem; padding-top: 5rem;">
+    <div class="col-xs-12 col-collapse">
+        <div class="well text-center">
+            <div class="row">
+                <div class="col-sm-8 col-collapse">
+                    <h2>
+                        <a href="http://ionlyseespots.github.io/theme-editor/index.html">Theme Editor</a>
+                    </h2>
+                    <h3>
+                        CSS + HTML
+                    </h3>
+                    <p>
+                        Select Theme CSS, edit Bootstrap colors CSS, edit Branding HTML and edit background image CSS.
+                    </p>
+                </div>
+                <div class="col-sm-4 col-collapse">
+                    <div class="well text-center">
+                        <i class="fa fa-html5 fa-5x"></i>
+                        <i class="fa fa-css3 fa-5x"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <section class="container">
     <div class="col-sm-6" style="padding-left: 0;">
         <div class="well text-center">
-            <div>d
+            <div>
                 <h3><a href="http://ionlyseespots.github.io/simple/app">CSS Editor</a></h3>
                 <h3>AngularJS + JSON = CSS</h3>
                 <p>
