--- a/api.html
+++ b/api.html
@@ -608,6 +608,64 @@ https://api.mywebsite.com/users?sort=joined&limit=5
             </dl>
             <hr />
 
+            <p>
+                <strong>Response <code>200</code> </strong>
+            </p>
+            <hr />
+
+            <h3>
+                Headers
+            </h3>
+            <pre>
+                <code>
+Content-Type: application/json
+                </code>
+            </pre>
+            <h3>
+                Body
+            </h3>
+            <pre>
+                <code>
+[
+    {
+        "name": "alice",
+        "image": "http://foo.com/alice.jpg",
+        "joined": "2013-11-01"
+        },
+        {
+        "name": "bob",
+        "image": "http://foo.com/bob.jpg",
+        "joined": "2013-11-02"
+    }
+]
+                </code>
+            </pre>
+            <h3>
+                Schema
+            </h3>
+            <pre>
+                <code>
+{
+    "type": "array",
+    "maxItems": 50,
+    "items": {
+        "type": "object",
+        "properties": {
+            "name": {
+                "type": "string"
+            },
+            "image": {
+                "type": "string"
+            },
+            "joined": {
+                "type": "string",
+                "pattern": "\d{4}-\d{2}-\d{2}"
+            }
+        }
+    }
+}
+                </code>
+            </pre>
         </section>
     </article>
 </main>
