--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             <div class="col-sm-4 col-collapse">
                 <div class="well text-center">
                     <nav>
-                        <a href="https://twitter.com/av8boogie"><i class="fa fa-twitter fa-3x"></i></a>
+                        <a href="https://twitter.com/ionlyseespots"><i class="fa fa-twitter fa-3x"></i></a>
                         <a href="https://github.com/ionlyseespots"><i class="fa fa-github fa-3x"></i></a>
-                        <a href="https://soundcloud.com/reverendboogieman">  <i class="fa fa-soundcloud fa-3x"></i></a>
+                        <a href="https://soundcloud.com/reverendbogeyman">  <i class="fa fa-soundcloud fa-3x"></i></a>
                     </nav>
                 </div>
             </div>
@@ -68,18 +68,41 @@
             <div class="row">
                 <div class="col-sm-8 col-collapse">
                     <h2>
+                        <a href="http://ionlyseespots.github.io/sawss/ide/index.html">HTML5 Editor</a>
+                    </h2>
+                    <h3>
+                        Experimental Client Side Editor
+                    </h3>
+                    <p>
+                        HTML5 API + Ambient Design = Semantic AWare Style Sheet (Sawss)
+                    </p>
+                </div>
+                <div class="col-sm-4 col-collapse">
+                    <div class="well text-center">
+                        <i class="fa fa-html5 fa-5x"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="container" style="padding-bottom: 5rem; padding-top: 5rem;">
+    <div class="col-xs-12 col-collapse">
+        <div class="well text-center">
+            <div class="row">
+                <div class="col-sm-8 col-collapse">
+                    <h2>
                         <a href="http://ionlyseespots.github.io/ambient-design/index.html">Ambient Design</a>
                     </h2>
                     <h3>
                         Ambient design is a methodology for creating layout.
                    </h3>
                     <p>
-                        Ambient has a core fluid design system for HTML sections as a presentation format without the need for structure based classes.
+                        Ambient has a core fluid CSS (flexbox) framework for HTML5 sections as a presentation format without the need for structure based classes.
                     </p>
                 </div>
                 <div class="col-sm-4 col-collapse">
                     <div class="well text-center">
-                        <i class="fa fa-html5 fa-5x"></i>
                         <i class="fa fa-css3 fa-5x"></i>
                     </div>
                 </div>
@@ -128,9 +151,9 @@
 </section>
 <footer class="container"  style="padding-bottom: 6rem; padding-top: 6rem;">
     <h5>
-        <a href="https://twitter.com/av8boogie">Twitter</a>
+        <a href="https://twitter.com/ionlyseespots">Twitter</a>
         <a href="https://github.com/ionlyseespots">GitHub</a>
-        <a href="https://soundcloud.com/reverendboogieman">SoundCloud</a>
+        <a href="https://soundcloud.com/reverendbogeyman">SoundCloud</a>
     </h5>
 </footer>
 </body>
