--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <div class="col-sm-7 col-sm-offset-1 col-collapse">
                 <h1>I only see spots</h1>
                 <p>UX / IA / UI</p>
+                <p>I am currently seeking employment.</p>
             </div>
         </div>
     </div>
