--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <div class="col-sm-4 col-collapse">
                 <div class="well text-center">
                     <nav>
+                        <a href="https://www.linkedin.com/pub/ken-buras/5/901/7b0"><i class="fa fa-linkedin-square fa-3x"></i></a>
                         <a href="https://twitter.com/ionlyseespots"><i class="fa fa-twitter fa-3x"></i></a>
                         <a href="https://github.com/ionlyseespots"><i class="fa fa-github fa-3x"></i></a>
                         <a href="https://soundcloud.com/reverendbogeyman">  <i class="fa fa-soundcloud fa-3x"></i></a>
@@ -152,6 +153,7 @@
 </section>
 <footer class="container"  style="padding-bottom: 6rem; padding-top: 6rem;">
     <h5>
+        <a href="https://www.linkedin.com/pub/ken-buras/5/901/7b0">LinkedIn</a>
         <a href="https://twitter.com/ionlyseespots">Twitter</a>
         <a href="https://github.com/ionlyseespots">GitHub</a>
         <a href="https://soundcloud.com/reverendbogeyman">SoundCloud</a>
