--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
     </div>
 </section>
-<section class="container" style="padding-bottom: 5rem; padding-top: 5rem;">
+<!-- <section class="container" style="padding-bottom: 5rem; padding-top: 5rem;">
     <div class="col-xs-12 col-collapse">
         <div class="well text-center">
             <h2>
@@ -126,7 +126,7 @@
             </p>
         </div>
     </div>
-</section>
+</section> -->
 <section class="container">
     <div class="col-sm-6" style="padding-left: 0;">
         <div class="well text-center">
