--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <h1>I only see spots</h1>
                 <p>UX / IA / UI</p>
                 <p>I am currently seeking employment.</p>
-                <p><a href="KenBuras-_resume.pdf">Resume</a></p>
+                <p><a href="KenBuras_resume.pdf">Resume</a></p>
             </div>
         </div>
     </div>
